--- a/main.html
+++ b/main.html
@@ -86,7 +86,7 @@ In my part-time role at cpcproducts.com.au, usage of CodeIgniter for backend dev
                 <h3>SNL (Snakes & Ladders)</h3>
                 <p>Snakes and Ladders in C" is a virtual rendition of the classic board game, realized through the C programming language with OpenGL for graphics. It offers players a digital space to enjoy the timeless game, complete with visual elements like rolling dice and moving tokens.</p>
                 <br> <br>
-                    <a href="https://github.com/esc4norrr/">snl</a>
+                    <a href="https://github.com/esc4norrr/snl">snl</a>
             </div>
         </div>
     </section>
@@ -106,7 +106,7 @@ In my part-time role at cpcproducts.com.au, usage of CodeIgniter for backend dev
     </section>
     <section id="contact">
         <h2>Contact</h2>
-        <p>Feel free to reach out to me at z.abhiyan@gmail.com.</p>
+        <p>Feel free to reach out to me at <u>z.abhiyan@gmail.com</u>.</p>
     </section>
 
     <footer>
